tests/fixtures/invalid/abs_dict.py
# Cannot call abs() with Dict[str, int]
x = abs({"a": 1})
